--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta itemprop="name" content="Free for Developers">
     <meta itemprop="description" content="Developers and Open Source authors now have a massive amount of services offering free tiers, but it can be hard to find them all to make informed decisions.">
     <meta itemprop="image" content="https://raw.githubusercontent.com/ripienaar/free-for-dev/master/logo.webp">
-
+    <!-- МОЙ КОММЕНТАРИЙ ТУТ !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!   ____________---------_-->
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://free-for.dev">
     <meta property="og:type" content="website">
