Изменение 3 добавление строк

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <!-- :-)(-: ^_^ :-()0: XAXAXAXAXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXAX -----_-->
  
+<!-- 00000______------_____-------_______-------_______--------_________-------________-------______-->
 
+GITHUB ^_^ ^_^ GITHUB
 
 
 
