Изменение 1 добавление и удаление строк

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Вааааа, ещё один мой комментарий!!!!!! ))))(((( :-) --> 
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -18,19 +18,19 @@
  
 
 
-sdxfgcvhhhhhhhhhhhhhhhhhhk           iyyyyyyyyyyyyyyyyyyyy            cfffffffffffffff
-ohuuu        uohhhhhhhhhhhhh        joulh 453563363
-
-
-
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Free for Developers">
-    <meta name="twitter:description" content="Developers and Open Source authors now have a massive amount of services offering free tiers, but it can be hard to find them all to make informed decisions.">
+sdxfgcеvhhhhhhhhhhhhhhhhhhk           iyyyyyyyyyyyyyyyyyyyy            cfffffffffffffff
+ohuеноuоеоu        uohhhhhhhhhhhhh        joulh 453563363
+оенеое
+ркокоееон
+ркркекнноео
+крококок
+    <!-- Tкееркркрпwitter Meta рTags -->
+    <metaр name="twitter:cardрк" content="summary_large_image">
+    <meta name="twiкркноеркекtter:title" content="Free for Developers">
+апуощпопщуещ    <meta name="twitter:description" content="Developers and Open Source authors now have a massive amount of services offering free tiers, but it can be hard to find them all to make informed decisions.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/ripienaar/free-for-dev/master/logo.webp">
-
-    <!-- Stylesheets -->
+п
+ уппуерур   <!-- Stylesheets -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css">
 
