Изменение 3 добавление и удаление строк

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Вааааа, ещё один мой комментарий!!!!!! ))))(((( :-) --> 
 
-<html>
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<html>0х6ш4563649ш5з 945984535 8654-69 1000-7 = 993 1000-7 993 1000-7 
+  <head>пукжлукпулпузупоукзлуез358605460249585038059083756376054506835036т 6 8630896396 3
+поуодкпоупуоппушоупзузр зпуру пцкпущугкпз швпщуопщопзуопз     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
 
